add hallmarks of cancer mode

--- a/index.html
+++ b/index.html
@@ -304,6 +304,16 @@
                     </li>
                 </ul>
             </dd>
+            <dt>
+                <a href='hallmarks.html?test=true&circles=true' target='_test'>hallmarks.html?test=true&circles=true</a>
+            </dt>
+            <dd>
+                <ul>
+                    <li>
+                        for testing hallmarks mode
+                    </li>
+                </ul>
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
