--- a/test20.html
+++ b/test20.html
@@ -41,6 +41,7 @@
 
         <script type="text/javascript" src="scripts/circleMapGraphControls.js"></script>
 
+		<!-- packaged version  -->
         <!-- <script type="text/javascript" src="scripts/circleMapGraph_webtool.js"></script> -->
 
         <noscript>
