convert superpathway file to sif

--- a/test20.html
+++ b/test20.html
@@ -23,7 +23,7 @@
             ga('send', 'pageview');
         </script>
 
-        <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+        <!-- <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
         <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
         <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
@@ -39,10 +39,10 @@
 
         <script type="text/javascript" src="bower_components/pablo/pablo.js"></script>
 
-        <script type="text/javascript" src="scripts/circleMapGraphControls.js"></script>
+        <script type="text/javascript" src="scripts/circleMapGraphControls.js"></script> -->
 
 		<!-- packaged version  -->
-        <!-- <script type="text/javascript" src="scripts/circleMapGraph_webtool.js"></script> -->
+        <script type="text/javascript" src="scripts/circleMapGraph_webtool.js"></script>
 
         <noscript>
             <div align="center">
