--- a/test20.html
+++ b/test20.html
@@ -3,17 +3,18 @@
     <head>
         <title>Stuart Lab CircleMap Network Graph Tool</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main19.css" type="text/css" />
+        <link rel="stylesheet" href="css/main19.css" type="text/css"/>
         <link type="text/css" rel="stylesheet" href="bower_components/jQuery-contextMenu/src/jquery.contextmenu.css">
 
         <script>
-            (function(i, s, o, g, r, a, m) {
+            (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] ||
-                function() {
+                i[r] = i[r] || function () {
                     (i[r].q = i[r].q || []).push(arguments);
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+                },
+                i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
                 a.async = 1;
                 a.src = g;
                 m.parentNode.insertBefore(a, m);
@@ -41,13 +42,14 @@
 
         <script type="text/javascript" src="scripts/circleMapGraphControls.js"></script> -->
 
-		<!-- packaged version  -->
+        <!-- packaged version  -->
         <script type="text/javascript" src="scripts/circleMapGraph_webtool.js"></script>
 
         <noscript>
             <div align="center">
                 <p style="color:black;background-color:red;font-size:18pt">
-                    This website requires JavaScript.  Please turn on JavaScript and then <a href="">try it again</a>.
+                    This website requires JavaScript. Please turn on JavaScript and then
+                    <a href="">try it again</a>.
                 </p>
             </div>
         </noscript>
@@ -71,14 +73,8 @@
             circleMapGraphDivElem = document.getElementById('graphDiv');
             circleMapGraphControls.buildControls(controlsDivElement, circleMapGraphDivElem);
 
-            // circleDataLoaded = (utils.getQueryStringParameterByName('circles').toLowerCase() === 'true') ? true : false;
-            // circleMapGraph.build({
-            // "medbookGraphData" : netData,
-            // "medbookExprData" : exprData,
-            // "medbookViperSignaturesData" : cohortSignaturesData,
-            // "containerDiv" : document.getElementById('graphDiv'),
-            // "circleDataLoaded" : circleDataLoaded
-            // });
+            // circleDataLoaded = (utils.getQueryStringParameterByName('circles').toLowerCase() === 'true') ? true : false; circleMapGraph.build({ "medbookGraphData" : netData, "medbookExprData" : exprData, "medbookViperSignaturesData" : cohortSignaturesData,
+            // "containerDiv" : document.getElementById('graphDiv'), "circleDataLoaded" : circleDataLoaded });
         </script>
     </body>
 </html>
